--- a/src/styles/components/_author.styl
+++ b/src/styles/components/_author.styl
@@ -5,16 +5,16 @@
     max-width 100%
     margin 9rem auto 0
 
-    .selfie
+    > .selfie
         width 90%
         border-radius 100%
 
-    .name,
-    .bio
+    > .name,
+    > .bio
         width 60%
         display inline-block
 
-    .name
+    > .name
         font-size 1.5rem
         font-family fontSans
         font-weight 500
@@ -28,7 +28,7 @@
             width 100%
             display block
 
-    .bio
+    > .bio
         font-family fontSans
         font-weight 300
         color gama
@@ -45,7 +45,7 @@
             width 100%
             display block
 
-    .toleft
+    > .toleft
         width 10%
         display inline-block
 
@@ -55,7 +55,7 @@
         +tablet()
             width 20%
 
-    .toright
+    > .toright
         width 89%
         display inline-block
         vertical-align top
