--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -27,19 +27,19 @@
         margin 0
         padding 0
 
-    > .list > .item
-        display inline-block
+        > .item
+            display inline-block
 
-    > .list > .item > .link
-        display inline-block
-        font-weight 300
-        font-size 2rem
-        padding 7px 15px
-        margin 0
-        border-radius 4%
-        transition all .4s ease-in-out
-        width 70px
-        text-decoration none
+        > .item > .link
+            display inline-block
+            font-weight 300
+            font-size 2rem
+            padding 7px 15px
+            margin 0
+            border-radius 4%
+            transition all .4s ease-in-out
+            width 70px
+            text-decoration none
 
-        &:hover
-            color alpha
+            &:hover
+                color alpha
