--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -682,41 +682,44 @@ pre {
 .header-home > .description a {
   font-weight: 200;
 }
-.nav {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-.nav > .list {
+.nav > .list,
+.nav-home > .list {
   list-style: none;
   margin: 0;
   padding: 0 13px 0;
 }
-.nav > .list > .item {
+.nav > .list > .item,
+.nav-home > .list > .item {
   display: inline-block;
 }
-.nav > .list > .item > .link {
+.nav > .list > .item > .link,
+.nav-home > .list > .item > .link {
   display: inline-block;
   font-weight: 300;
   font-size: 1.4rem;
   padding: 20px 10px;
   text-decoration: none;
 }
+.nav {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.nav > .list {
+  padding: 0 13px 0;
+}
+.nav > .list > .item > .link {
+  font-size: 1.4rem;
+  padding: 20px 10px;
+}
 .nav-home {
   margin-top: 40px;
   text-align: center;
 }
 .nav-home > .list {
-  list-style: none;
-  margin: 0;
   padding: 0;
 }
-.nav-home > .list > .item {
-  display: inline-block;
-}
 .nav-home > .list > .item > .link {
-  display: inline-block;
-  font-weight: 300;
   font-size: 2rem;
   padding: 7px 15px;
   margin: 0;
@@ -724,7 +727,6 @@ pre {
   -webkit-transition: all 0.4s ease-in-out;
           transition: all 0.4s ease-in-out;
   width: 70px;
-  text-decoration: none;
 }
 .nav-home > .list > .item > .link:hover {
   color: #666;
