--- a/src/styles/components/_nav.styl
+++ b/src/styles/components/_nav.styl
@@ -1,31 +1,9 @@
-.nav
-    position absolute
-    right 0
-    top 0
-
+.nav,
+.nav-home
     > .list
         list-style none
         margin 0
         padding 0 13px 0
-
-    > .list > .item
-        display inline-block
-
-    > .list > .item > .link
-        display inline-block
-        font-weight 300
-        font-size 1.4rem
-        padding 20px 10px
-        text-decoration none
-
-.nav-home
-    margin-top 40px
-    text-align center
-
-    > .list
-        list-style none
-        margin 0
-        padding 0
 
         > .item
             display inline-block
@@ -33,13 +11,37 @@
         > .item > .link
             display inline-block
             font-weight 300
+            font-size 1.4rem
+            padding 20px 10px
+            text-decoration none
+
+
+.nav
+    position absolute
+    right 0
+    top 0
+
+    > .list
+        padding 0 13px 0
+
+        > .item > .link
+            font-size 1.4rem
+            padding 20px 10px
+
+.nav-home
+    margin-top 40px
+    text-align center
+
+    > .list
+        padding 0
+
+        > .item > .link
             font-size 2rem
             padding 7px 15px
             margin 0
             border-radius 4%
             transition all .4s ease-in-out
             width 70px
-            text-decoration none
 
             &:hover
                 color alpha
