--- a/src/styles/pages/_post.styl
+++ b/src/styles/pages/_post.styl
@@ -18,7 +18,9 @@
         text-rendering optimizeLegibility
 
     // general style
-    h2, h3, h4
+    > h2,
+    > h3,
+    > h4
         margin-top 40px
 
         a
