--- a/src/styles/components/_author.styl
+++ b/src/styles/components/_author.styl
@@ -5,16 +5,16 @@
     max-width 100%
     margin 9rem auto 0
 
-    > .selfie
+    > .toleft > .selfie
         width 90%
         border-radius 100%
 
-    > .name,
-    > .bio
+    > .toright > .name,
+    > .toright > .bio
         width 60%
         display inline-block
 
-    > .name
+    > .toright > .name
         font-size 1.5rem
         font-family fontSans
         font-weight 500
@@ -28,7 +28,7 @@
             width 100%
             display block
 
-    > .bio
+    > .toright > .bio
         font-family fontSans
         font-weight 300
         color gama
