--- a/_includes/main.css
+++ b/_includes/main.css
@@ -832,9 +832,36 @@ pre {
 .social-links > .link {
   margin: 0 3px;
   text-decoration: none;
+  position: relative;
 }
 .social-links > .link:hover > .icon {
   fill: #4b0082;
+}
+.social-links > .link:hover:before {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+.social-links > .link:before {
+  content: attr(data-title);
+  display: inline-block;
+  position: absolute;
+  bottom: -38px;
+  left: -20px;
+  margin: 0 auto;
+  font-size: 13px;
+  padding: 3px 10px;
+  background: #222;
+  color: #fff;
+  border: solid 1px rgba(17,17,17,0.2);
+  border-radius: 2px;
+  height: 22px;
+  line-height: 22px;
+  opacity: 0;
+  -webkit-transition: opacity 150ms linear, -webkit-transform 150ms linear, -webkit-transform 150ms linear;
+          transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear;
+  -webkit-transform: translate3d(0, -8px, 0);
+          transform: translate3d(0, -8px, 0);
 }
 .social-links > .icon {
   -webkit-transition: all ease-in-out 0.2s;
