--- a/src/styles/components/_social-links.styl
+++ b/src/styles/components/_social-links.styl
@@ -32,6 +32,7 @@
             opacity 0
             transition opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear
             transform translate3d(0,-8px,0)
+            z-index 99
 
     > .icon
         transition all ease-in-out .2s
