--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@ layout: compress
         {% if page.tag %}
             <div class="post">
         {% else %}
-            {% if page.title == "About" %}
+            {% if page.title == "About" or page.title == "404" %}
                 <div class="page">
             {% else %}
                 <div class="{{ page.title | downcase }}">
