--- a/_includes/main.css
+++ b/_includes/main.css
@@ -493,6 +493,11 @@ pre {
   text-align: center;
   margin-bottom: 6rem;
 }
+.about img {
+  width: 50%;
+  margin: 0 auto;
+  display: block;
+}
 .post {
   margin-top: 125px;
 }
