--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
             <div class="post">
         {% else %}
             {% if page.title == "About" or page.title == "404" %}
-                <div class="page">
+                <div class="page {{ page.title | downcase }}">
             {% else %}
                 <div class="{{ page.title | downcase }}">
             {% endif %}
