--- a/src/styles/pages/_page.styl
+++ b/src/styles/pages/_page.styl
@@ -4,3 +4,9 @@
     > h1
         text-align center
         margin-bottom 6rem
+
+.about
+    img
+        width 50%
+        margin 0 auto
+        display block
