--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
 
 <span class="date">
     <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
+    {% if site.read-time %} - {% include read-time.html %}{% endif %}
 </span>
 
 {{content}}
