--- a/src/styles/pages/_post.styl
+++ b/src/styles/pages/_post.styl
@@ -5,7 +5,8 @@
         text-align center
         margin-bottom 3rem
 
-    > .date
+    > .date,
+    > .tags
         color gama
         font-weight 300
         font-size 1.4rem
@@ -16,6 +17,17 @@
         letter-spacing 1px
         -webkit-font-smoothing antialiased
         text-rendering optimizeLegibility
+
+    > .date
+        margin-bottom 2rem
+
+    > .tags > .item
+        padding 3px 6px
+        border-radius 3px
+        font-size 1.1rem
+        background epsilon
+        color alpha
+        letter-spacing 1px
 
     // general style
     > h2,
