--- a/_includes/main.css
+++ b/_includes/main.css
@@ -505,7 +505,8 @@ pre {
   text-align: center;
   margin-bottom: 3rem;
 }
-.post > .date {
+.post > .date,
+.post > .tags {
   color: #aaa;
   font-weight: 300;
   font-size: 1.4rem;
@@ -516,6 +517,17 @@ pre {
   letter-spacing: 1px;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+}
+.post > .date {
+  margin-bottom: 2rem;
+}
+.post > .tags > .item {
+  padding: 3px 6px;
+  border-radius: 3px;
+  font-size: 1.1rem;
+  background: #ededed;
+  color: #666;
+  letter-spacing: 1px;
 }
 .post > h2,
 .post > h3,
