--- a/src/styles/pages/_post.styl
+++ b/src/styles/pages/_post.styl
@@ -28,6 +28,7 @@
         background epsilon
         color alpha
         letter-spacing 1px
+        margin 0 .5rem
 
     // general style
     > h2,
