--- a/src/styles/pages/_home-blog-projects.styl
+++ b/src/styles/pages/_home-blog-projects.styl
@@ -42,7 +42,7 @@
         font-weight 500
         transition all ease-in-out .2s
 
-    &:hover .title
+    > .item:hover > .url > .title
         color delta
 
     // maybe we can't nest html5 elements
@@ -58,7 +58,7 @@
         text-align right
         transition all ease-in-out .2s
 
-    &:hover aside
+    .item:hover .url aside
         color alpha
 
 .projects > .list > .item > .url
