--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 {% if page.title == "Home" or page.title == "Blog" or page.title == "Projects" %}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
-    <header class="header-home">
+    <header class="header-home {% if site.animation %}animated{% endif %}">
         <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/{{ site.picture }}" />
 
         <h1 class="title">{{ site.name }}</h1>
