--- a/_includes/main.css
+++ b/_includes/main.css
@@ -399,6 +399,36 @@ pre {
   fill: #000;
   color: #000;
 }
+.animated {
+  -webkit-animation: fade-in-down 0.6s;
+          animation: fade-in-down 0.6s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+@-webkit-keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+@keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
 .home,
 .blog,
 .projects {
