--- a/src/styles/base/_helpers.styl
+++ b/src/styles/base/_helpers.styl
@@ -7,3 +7,16 @@
 	height 17px
 	fill #000
 	color #000
+
+.animated
+	animation fade-in-down 0.6s
+	animation-delay .3s
+
+@keyframes fade-in-down
+	0%
+		opacity 0
+		transform translateY(-10px)
+
+	100%
+		opacity 1
+		transform translateY(0)
