--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,9 +1,28 @@
 <div class="related">
-    {% if page.previous.url %}
-        <a class="previous" href="{{ page.previous.url }}">&laquo; {{page.previous.title}}</a>
-    {% endif %}
-
-    {% if page.next.url %}
-        <a class="next" href="{{ page.next.url }}">{{page.next.title}} &raquo;</a>
+    {% assign hasSimilar = '' %}
+    {% for post in site.posts  %}
+        {% assign postHasSimilar = false %}
+        {% for tag in post.tags %}
+            {% for thisTag in page.tags %}
+                {% if postHasSimilar == false and hasSimilar.size < 5 and post != page and tag == thisTag %}
+                    {% if hasSimilar.size == 0 %}
+                    <h4>Related Posts</h4>
+                    <ul>
+                    {% endif %}
+                    <li class="relatedPost">
+                        <a href="{{ site.url }}{{ post.url }}">{{ post.title }}
+                        {% if post.series %}
+                            (Series: {{ post.series }})
+                        {% endif %}
+                        </a>
+                    </li>
+                    {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+                    {% assign postHasSimilar = true %}
+                {% endif %}
+            {% endfor %}
+        {% endfor %}
+    {% endfor %}
+    {% if hasSimilar.size > 0 %}
+        </ul>
     {% endif %}
 </div>
