--- a/src/styles/components/_footer.styl
+++ b/src/styles/components/_footer.styl
@@ -31,6 +31,8 @@
             transition ease-in-out all .3s
             position relative
             top 3px
+            display inherit
+            margin 0
 
             &:hover
                 fill delta !important
