--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1014,14 +1014,13 @@ pre {
   content: attr(data-title);
   display: inline-block;
   position: absolute;
-  bottom: -38px;
-  left: -20px;
+  bottom: -34px;
+  left: -6px;
   margin: 0 auto;
   font-size: 13px;
   padding: 3px 10px;
   background: #222;
   color: #fff;
-  border: solid 1px rgba(17,17,17,0.2);
   border-radius: 2px;
   height: 22px;
   line-height: 22px;
@@ -1031,6 +1030,28 @@ pre {
   -webkit-transform: translate3d(0, -8px, 0);
           transform: translate3d(0, -8px, 0);
   z-index: 99;
+}
+.social-links > .link:after {
+  content: "";
+  position: absolute;
+  top: 35px;
+  left: 13px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 6px solid #222;
+  opacity: 0;
+  -webkit-transition: opacity 150ms linear, -webkit-transform 150ms linear, -webkit-transform 150ms linear;
+          transition: opacity 150ms linear, transform 150ms linear, -webkit-transform 150ms linear;
+  -webkit-transform: translate3d(0, -8px, 0);
+          transform: translate3d(0, -8px, 0);
+  z-index: 100;
+}
+.social-links > .link:hover:after {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 }
 .social-links > .icon {
   -webkit-transition: all ease-in-out 0.2s;
