--- a/src/styles/base/_helpers.styl
+++ b/src/styles/base/_helpers.styl
@@ -44,6 +44,20 @@
 		min-width 114%
 		margin 2rem 0 2rem -7%
 
+.breaker
+	height 1px
+	margin 6rem auto
+	width 100%
+
+	&:before
+		content "• • •"
+		width 100%
+		text-align center
+		display block
+		color gama
+		letter-spacing 4px
+		position relative
+		top -8px
 
 /*
  * animations
