--- a/src/styles/base/_helpers.styl
+++ b/src/styles/base/_helpers.styl
@@ -1,3 +1,7 @@
+/*
+ * general helpers
+ */
+
 .text-center
 	text-align center
 
@@ -8,15 +12,27 @@
 	fill #000
 	color #000
 
-.animated
-	animation fade-in-down 0.6s
-	animation-delay .3s
+.clearfix:before,
+.clearfix:after
+	content ""
+	display table
 
-@keyframes fade-in-down
-	0%
-		opacity 0
-		transform translateY(-10px)
+.clearfix:after
+	clear both
 
-	100%
-		opacity 1
-		transform translateY(0)
+/*
+ * animations
+ */
+
+ .animated
+ 	animation fade-in-down 0.6s
+ 	animation-delay .3s
+
+ @keyframes fade-in-down
+ 	0%
+ 		opacity 0
+ 		transform translateY(-10px)
+
+ 	100%
+ 		opacity 1
+ 		transform translateY(0)
