--- a/src/styles/base/_general.styl
+++ b/src/styles/base/_general.styl
@@ -63,6 +63,20 @@ img,
 pre
 	border-radius 4px
 
+figcaption
+	position relative
+	top -20px
+	left 0
+	right 0
+	margin 0 auto
+	width 100%
+	text-align center
+	font-size 1.3rem
+	color gama
+	font-weight 300
+
+	+mobile()
+		font-size 1.2rem
 
 blockquote
 	padding-left 15px
