--- a/src/styles/base/_helpers.styl
+++ b/src/styles/base/_helpers.styl
@@ -20,6 +20,16 @@
 .clearfix:after
 	clear both
 
+.caption
+	position relative
+	top -20px
+	left 0
+	right 0
+	margin 0 auto
+	width 100%
+	text-align center
+	font-size 1.3rem
+
 /*
  * animations
  */
