bigger images - close #49

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -434,6 +434,22 @@ pre {
   text-align: center;
   font-size: 1.3rem;
 }
+.bigger-image {
+  min-width: 130%;
+  margin: 5rem 0 5rem -15%;
+}
+@media only screen and (max-width: 400px) {
+  .bigger-image {
+    min-width: 114%;
+    margin: 2rem 0 2rem -7%;
+  }
+}
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
+  .bigger-image {
+    min-width: 114%;
+    margin: 2rem 0 2rem -7%;
+  }
+}
 .animated {
   -webkit-animation: fade-in-down 0.6s;
           animation: fade-in-down 0.6s;
