--- a/src/styles/base/_helpers.styl
+++ b/src/styles/base/_helpers.styl
@@ -30,6 +30,19 @@
 	text-align center
 	font-size 1.3rem
 
+.bigger-image
+	min-width 130%
+	margin 5rem 0 5rem -15%
+
+	+mobile()
+		min-width 114%
+		margin 2rem 0 2rem -7%
+
+	+tablet()
+		min-width 114%
+		margin 2rem 0 2rem -7%
+
+
 /*
  * animations
  */
