--- a/src/styles/components/_social-links.styl
+++ b/src/styles/components/_social-links.styl
@@ -2,9 +2,12 @@
     margin-top 20px
 
     > .link
-        margin 0 3px
+        margin 0
         text-decoration none
         position relative
+        display inline-block
+        height 35px
+        width 35px
 
         &:hover
             > .icon
