--- a/src/styles/components/_share.styl
+++ b/src/styles/components/_share.styl
@@ -54,4 +54,6 @@
         fill #fff
         position relative
         top 3px
+        margin 0
         margin-right 4px
+        display inherit
