--- a/src/styles/components/_side-by-side.styl
+++ b/src/styles/components/_side-by-side.styl
@@ -30,6 +30,7 @@
         +below(780px)
             float none
             width 100%
+            margin-top 1rem
 
     > .right-image,
     > .left-image
@@ -40,3 +41,6 @@
 
     > figcaption
         top 7px
+
+        +below(780px)
+            top -17px
