--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -722,6 +722,10 @@ pre {
     width: 78%;
   }
 }
+.no-disqus {
+  border-bottom: none;
+  padding-bottom: 0;
+}
 .disqus {
   margin: 0 auto;
   max-width: 100%;
