--- a/_includes/main.css
+++ b/_includes/main.css
@@ -409,15 +409,6 @@ pre {
 .text-center {
   text-align: center;
 }
-.icon {
-  display: inline-block;
-  width: 17px;
-  height: 17px;
-  fill: #000;
-  text-align: center;
-  color: #000;
-  margin: 7px auto;
-}
 .clearfix:before,
 .clearfix:after {
   content: "";
@@ -425,47 +416,6 @@ pre {
 }
 .clearfix:after {
   clear: both;
-}
-.caption {
-  position: relative;
-  top: -20px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-  font-size: 1.3rem;
-}
-.bigger-image {
-  min-width: 130%;
-  margin: 5rem 0 5rem -15%;
-}
-@media only screen and (max-width: 400px) {
-  .bigger-image {
-    min-width: 114%;
-    margin: 2rem 0 2rem -7%;
-  }
-}
-@media only screen and (min-width: 400px) and (max-width: 1050px) {
-  .bigger-image {
-    min-width: 114%;
-    margin: 2rem 0 2rem -7%;
-  }
-}
-.breaker {
-  height: 1px;
-  margin: 6rem auto;
-  width: 100%;
-}
-.breaker:before {
-  content: "• • •";
-  width: 100%;
-  text-align: center;
-  display: block;
-  color: #aaa;
-  letter-spacing: 4px;
-  position: relative;
-  top: -8px;
 }
 .animated {
   -webkit-animation: fade-in-down 0.6s;
@@ -875,6 +825,56 @@ pre {
 .twitter-tweet {
   margin: 10px auto;
 }
+.icon {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  fill: #000;
+  text-align: center;
+  color: #000;
+  margin: 7px auto;
+}
+.caption {
+  position: relative;
+  top: 1rem;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+  font-size: 1.3rem;
+}
+.bigger-image {
+  min-width: 130%;
+  margin: 5rem 0 5rem -15%;
+}
+@media only screen and (max-width: 400px) {
+  .bigger-image {
+    min-width: 114%;
+    margin: 2rem 0 2rem -7%;
+  }
+}
+@media only screen and (min-width: 400px) and (max-width: 1050px) {
+  .bigger-image {
+    min-width: 114%;
+    margin: 2rem 0 2rem -7%;
+  }
+}
+.breaker {
+  height: 1px;
+  margin: 6rem auto;
+  width: 100%;
+}
+.breaker:before {
+  content: "• • •";
+  width: 100%;
+  text-align: center;
+  display: block;
+  color: #aaa;
+  letter-spacing: 4px;
+  position: relative;
+  top: -8px;
+}
 .pagination {
   width: 95%;
   margin: 3rem auto 0;
@@ -967,55 +967,59 @@ pre {
 @media only screen and (min-width: 780px) {
   .side-by-side {
     width: 130%;
-    margin: 4rem 0 0 -15%;
+    margin: 6rem 0 6rem -15%;
   }
 }
 @media only screen and (max-width: 780px) {
   .side-by-side {
     width: 100%;
-    margin: 4rem 0 0;
+    margin: 4rem 0;
   }
 }
-.side-by-side > .left-image {
-  float: left;
-  width: 48%;
+.side-by-side > .toleft,
+.side-by-side > .toright {
+  display: inline-block;
+  width: 47.5%;
 }
-.side-by-side > .right-image {
-  float: right;
-  width: 48%;
+@media only screen and (max-width: 780px) {
+  .side-by-side > .toleft img,
+  .side-by-side > .toright img {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+  }
 }
-.side-by-side > .left-text {
-  float: left;
-  width: 48%;
+@media only screen and (min-width: 780px) {
+  .side-by-side > .toleft {
+    margin-right: 2%;
+  }
+}
+@media only screen and (max-width: 780px) {
+  .side-by-side > .toleft {
+    width: 100%;
+    margin: 0 0 4rem 0;
+  }
+}
+@media only screen and (min-width: 780px) {
+  .side-by-side > .toright {
+    margin-left: 2%;
+    vertical-align: top;
+  }
+}
+@media only screen and (max-width: 780px) {
+  .side-by-side > .toright {
+    width: 100%;
+    margin: 0 0 4rem 0;
+  }
+}
+.side-by-side > .toleft > p,
+.side-by-side > .toright > p {
   margin: 0 0 4rem 0;
 }
-.side-by-side > .right-text {
-  float: right;
-  width: 48%;
-  margin: 0 0 4rem 0;
-}
 @media only screen and (max-width: 780px) {
-  .side-by-side > .right-text,
-  .side-by-side > .left-text {
-    float: none;
-    width: 100%;
-    margin-top: 1rem;
-  }
-}
-@media only screen and (max-width: 780px) {
-  .side-by-side > .right-image,
-  .side-by-side > .left-image {
-    float: none;
-    width: 100%;
-    margin-bottom: 2rem;
-  }
-}
-.side-by-side > figcaption {
-  top: 7px;
-}
-@media only screen and (max-width: 780px) {
-  .side-by-side > figcaption {
-    top: -17px;
+  .side-by-side > .toleft > p,
+  .side-by-side > .toright > p {
+    margin: 0;
   }
 }
 .social-links {
